Revamp Find Command